--- a/data/css/roaext.less
+++ b/data/css/roaext.less
@@ -102,6 +102,11 @@
     }
   }
 
+  &-gain-drop-filter-input {
+    .roaext-gradient-background;
+    width: 150px;
+  }
+
   &-timer-input {
     .roaext-gradient-background;
   }
