--- a/data/templates/playerGainWindow.html
+++ b/data/templates/playerGainWindow.html
@@ -32,8 +32,8 @@
 
             <div id="gainWndDropMap" style="margin-top: 20px">
                 <div class="center">
-                    <input id="gainDropMapFilterDropValue" style="width: 50px">Filter by Drop</input>
-                    <input id="gainDropMapFilterSourceValue" style="width: 50px">Filter by Source</input>
+                    <label>Filter by Drop: <input id="gainDropMapFilterDropValue" class="roaext-gain-drop-filter-input"/></label>
+                    <label style="margin-left: 20px">Filter by Source: <input id="gainDropMapFilterSourceValue" class="roaext-gain-drop-filter-input"/></label>
                 </div>
                 <table id="gainWndDropMapTable" class="sorted_table" style="width: 80%; margin-left: 10%">
                     <thead>
