added count and average to gain tracker / window

--- a/data/templates/playerGainWindow.html
+++ b/data/templates/playerGainWindow.html
@@ -19,7 +19,9 @@
                         <tr>
                             <th>Id</th>
                             <th>Type</th>
+                            <th>Count</th>
                             <th>Amount</th>
+                            <th>Average</th>
                             <th>#/hour</th>
                             <th>#/hour (over 24h)</th>
                         </tr>
